[gd_scene load_steps=7 format=2]

[ext_resource path="res://Dialogue/DialoguePopup.gd" type="Script" id=1]
[ext_resource path="res://Themes/DefaultFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://sprites/cavestuff/salamanders/green_react1.png" type="Texture" id=3]
[ext_resource path="res://tunes/dialogue/done.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "audio"
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="DialoguePopup" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 96.5952
margin_top = 628.19
margin_right = 1824.6
margin_bottom = 1006.19
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_right = 1628.0
margin_bottom = 278.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DialogueHBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 1628.0
margin_bottom = 274.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Text" type="Label" parent="Panel/MarginContainer/VBoxContainer/DialogueHBoxContainer"]
margin_right = 1624.0
margin_bottom = 274.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "HELLO! HOW ARE YOU DOING?
I AM DOING WELL, THANKS!"
autowrap = true

[node name="PlayerChoicesRight" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/DialogueHBoxContainer"]
margin_left = 1628.0
margin_right = 1628.0
margin_bottom = 274.0

[node name="PlayerChoicesBottom" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 278.0
margin_right = 1628.0
margin_bottom = 278.0

[node name="NextButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/PlayerChoicesBottom"]
visible = false
margin_right = 40.0
margin_bottom = 104.0
disabled = true
toggle_mode = true

[node name="Panel2" type="Panel" parent="."]
visible = false
margin_left = 1432.99
margin_top = 323.138
margin_right = 1773.99
margin_bottom = 596.138
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Panel2"]
margin_right = 335.0
margin_bottom = 261.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="Panel2/CenterContainer"]
margin_right = 335.0
margin_bottom = 261.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 1 )
anims/stop = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Effects"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/PlayerChoicesBottom/NextButton" to="." method="handle_button_click"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
